k8s-mercury.yaml
apiVersion: v1
kind: Service
metadata:
  name: mercury-service
spec:
  type: LoadBalancer
  selector:
    app:  mercury-pod
  ports:
    - name: http
      port: 88
      protocol: TCP
      targetPort: 8081
---
apiVersion: apps/v1
# 声明我这里配置的是 Deployment
kind: Deployment
metadata:
  name: mercury-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app:  mercury-pod
  template:
    metadata:
      labels:
        app: mercury-pod
    spec:
      containers:
        - name: mercury
          image: mercury:v0.0.1
          ports:
            - containerPort: 8080
      restartPolicy: Always
