k8s-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql-pod
  ports:
    - protocol: TCP
      port: 3308
      targetPort: 3306
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  selector:
    matchLabels:
      app: mysql-pod
  template:
    metadata:
      labels:
        app: mysql-pod
    spec:
      containers:
        - name: mysql-8
          image: mysql:8.0.20
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - mountPath: /mysql
              name: mysql-storage
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: webook-mysql-pvc
