k8s-webook.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-service
spec:
  type: LoadBalancer
  selector:
    app:  webook-pod
  ports:
    - name: http
      port: 88
      protocol: TCP
      targetPort: 8080
---
apiVersion: apps/v1
# 声明我这里配置的是 Deployment
kind: Deployment
metadata:
  name: webook-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  webook-pod
  template:
    metadata:
      labels:
        app: webook-pod
    spec:
      containers:
        - name: webook
          image: webook:v0.0.1
          ports:
            - containerPort: 8080
